# Project_imapp

./: CMakeLists.txt  README.md  Time_vs_grain_size.txt  main.cpp  main_old_old.cpp  project.txt
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  mandelbrot
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  mandelbrot
